--- a/Lab2/OtherSelectors.html
+++ b/Lab2/OtherSelectors.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Звіти з лабораторних робіт</h1>
     <h1>З дисципліни "Інтернет-технології та проєктування WEB-застосувань"</h1>
-    <h3>Студента групи ІС-31 Ужакова Нікіти Костянтиновича</h3>
+    <h3>Студента групи ІС-32 Філіпович Дмитро Олександрович</h3>
     
     <hr>
     <table class="tableLabWorks">
