--- a/envDescription.html
+++ b/envDescription.html
@@ -124,10 +124,10 @@
 Інтеграцію з платіжними системами для безпечної онлайн-оплати.
 Захист персональних даних користувачів через SSL-сертифікати та інші заходи кібербезпеки.
 
-            <h2>Скріншот макету головної сторінки</h2>
-            <img src="images/SiteLayout1.jpg" alt="Скріншот макету головної сторінки" style="width:100%">
-            <h2>Скріншот макету сторінки каталогу піц</h2>
-            <img src="images/SiteLayout2.jpg" alt="Скріншот макету сторінки каталогу піц" style="width:100%">
+            <h2>Тема</h2>
+            Сайт з продажі комп'ютерів та деталей для них. Щоб клієнт міг порівнювати деталі,комп'ютери з іншними та вибрали найкращий для себе
+            <h2>Мета</h2>
+            
 
            </td> 
         </tr>
