--- a/Lab2/OtherSelectors.html
+++ b/Lab2/OtherSelectors.html
@@ -20,7 +20,7 @@
     <table class="tableLabWorks">
         <tr>
             <td><a href="../Lab1.html">Лабораторна <br>Робота №1</a></td>
-            <td><a href="../Lab2/Lab2.html">Лабораторна <br>Робота №2</a></td> 
+            <td><a href="../Lab2/./Lab2.html">Лабораторна <br>Робота №2</a></td> 
             <td>Лабораторна <br>Робота №3</td>
             <td>Лабораторна <br>Робота №4</td>
             <td>Лабораторна <br>Робота №5</td>
