--- a/Lab3/Task2_BlockRubber.html
+++ b/Lab3/Task2_BlockRubber.html
@@ -49,10 +49,7 @@
         </div>
         <div class="content"> 
             <h2>Скріншот</h2>
-            <img src="./images_Lab3/Task2/BlockRubber screen.jpg" alt="BlockRubber screen" width="70%">
-            <h2>Код</h2>          
-            <img src="./images_Lab3/Task2/BlockRubber code 1.jpg" alt="BlockRubber code" width="70%">
-            <img src="./images_Lab3/Task2/BlockRubber code 2.jpg" alt="BlockRubber code" width="70%">
+            <img src="./images_Lab3/Task2/2.2.png" alt="BlockRubber screen" width="70%">
         </div>
         
     </div>
