--- a/Lab3/Task2_TableFixed.html
+++ b/Lab3/Task2_TableFixed.html
@@ -49,10 +49,8 @@
         </div>
         <div class="content">  
             <h2>Скріншот</h2>
-            <img src="./images_Lab3/Task2/TableFixed screen.jpg" alt="TableFixed" width="70%">
-            <h2>Код</h2>
-            <img src="./images_Lab3/Task2/TableFixed code 1.jpg" alt="TableFixed code 1" width="70%">
-            <img src="./images_Lab3/Task2/TableFixed code 2.jpg" alt="TableFixed code 2" width="70%">
+            <img src="./images_Lab3/Task2/2.3.png" alt="TableFixed" width="70%">
+
         </div>
         
     </div>
