--- a/Lab3/Task2_TableRubber.html
+++ b/Lab3/Task2_TableRubber.html
@@ -49,11 +49,8 @@
         </div>
         <div class="content">  
             <h2>Скріншот</h2>
-            <img src="./images_Lab3/Task2/TableRubber screen.jpg" alt="TableRubber" width="70%">
-            <h2>Код</h2>
-            <img src="./images_Lab3/Task2/TableRubber code 1.jpg" alt="TableRubber code" width="70%">  
-            <img src="./images_Lab3/Task2/TableRubber code 2.jpg" alt="TableRubber code" width="70%">    
-            <img src="./images_Lab3/Task2/TableRubber code 3.jpg" alt="TableRubber code" width="70%">
+            <img src="./images_Lab3/Task2/2.4.png" alt="TableRubber" width="70%">
+         
         </div>
         
     </div>
