--- a/Lab3/Topic.html
+++ b/Lab3/Topic.html
@@ -52,21 +52,10 @@
             Мета: придбати практичні навички роботи  верстки сторінок засобами CSS, верстки на основі плаваючих елементів, 
             з’ясувати переваги та недоліки типів макетів веб-сторінок; придбати практичні навички роботи  верстки сторінок засобами CSS та FLEXBOX <br><br>
 
-            Місце розташування ЛР №3: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_2">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_2</a> <br>
-            Сайт піцерії: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_2/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_2/</a> <br>
+            Місце розташування сайту: <a href="https://github.com/dimalfi/is-32_computer_complection_Filipovych">https://github.com/dimalfi/is-32_computer_complection_Filipovych</a> <br>
+            Сайт: <a href="https://dimalfi.github.io/is-32_computer_complection_Filipovych/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_2/</a> <br>
 
-            Місце розташування ЛР №3 Завдання 2.1: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.1">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.1</a> <br>
-            Сайт Завдання 2.1: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.1/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.1/</a> <br>
-            Місце розташування ЛР №3 Завдання 2.2: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.2">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.2</a> <br>
-            Сайт Завдання 2.2: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.2/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.2/</a> <br>
-            Місце розташування ЛР №3 Завдання 2.3: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.3">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.3</a> <br>
-            Сайт Завдання 2.3: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.3/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.3/</a> <br>
-            Місце розташування ЛР №3 Завдання 2.4: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.4">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.2.4</a> <br>
-            Сайт Завдання 2.4: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.4/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.2.4/</a> <br>
-            Місце розташування ЛР №3 Завдання 3: <a href="https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.3">https://github.com/NKUzhakov/IC-31-Uchakov-Nikita-Lab_3.3</a> <br>
-            Сайт Завдання 3: <a href="https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.3/">https://nkuzhakov.github.io/IC-31-Uchakov-Nikita-Lab_3.3/</a> <br><br>
-
-
+            
             Місце розташування звітнього HTML-документу: <a href="https://github.com/dimalfi/is-32_zvit_Filipovych">https://github.com/dimalfi/is-32_zvit_Filipovych</a> <br>
             Сайт звітнього HTML-документу: <a href="dimalfi.github.io/is-32_zvit_Filipovych/">dimalfi.github.io/is-32_zvit_Filipovych/</a> <br>
 
