--- a/Lab3/Task1.html
+++ b/Lab3/Task1.html
@@ -49,18 +49,17 @@
         </div>
         <div class="content"> 
             <h2>Cкріншот головної сторінки сайту:</h2>  
-            <img src="./images_Lab3/Task1/Homepage screenshot 1.jpg" alt="Homepage screenshot 1" width="70%">
-            <img src="./images_Lab3/Task1/Homepage screenshot 2.jpg" alt="Homepage screenshot 2" width="70%">  
-            <img src="./images_Lab3/Task1/Homepage screenshot 3.jpg" alt="Homepage screenshot 3" width="70%">   
+            <img src="./images_Lab3/Task1/1.1.png" alt="Homepage screenshot 1" width="70%">
+            <img src="./images_Lab3/Task1/1.2.png" alt="Homepage screenshot 2" width="70%">  
+  
             <h2>HTML-програмний код макету сайту:</h2>
-            <img src="./images_Lab3/Task1/code 1.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 2.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 3.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 4.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 5.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 6.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 7.jpg" alt="code" width="70%">
-            <img src="./images_Lab3/Task1/code 8.jpg" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.3.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.4.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.5.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.6.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.7.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.8.png" alt="code" width="70%">
+            <img src="./images_Lab3/Task1/1.9.png" alt="code" width="70%">
         </div>
         
     </div>
