--- a/Lab3/Task2_BlockFixed.html
+++ b/Lab3/Task2_BlockFixed.html
@@ -49,10 +49,7 @@
         </div>
         <div class="content"> 
             <h2>Скріншот</h2>
-            <img src="./images_Lab3/Task2/BlockFixed screen.jpg" alt="BlockFixed screen" width="70%">
-            <h2>Код</h2>
-            <img src="./images_Lab3/Task2/BlockFixed code 1.jpg" alt="BlockFixed code" width="70%">
-            <img src="./images_Lab3/Task2/BlockFixed code 2.jpg" alt="BlockFixed code" width="70%">        
+            <img src="./images_Lab3/Task2/2.1.png" alt="BlockFixed screen" width="70%">      
         </div>
         
     </div>
