--- a/Lab1.html
+++ b/Lab1.html
@@ -48,8 +48,8 @@
         <tr>
             <td>Лабораторна <br>Робота №1</a></td>
             <td><a href="./Lab2/Lab2.html">Лабораторна <br>Робота №2</a></td>             
-            <td>Лабораторна <br>Робота №3</td>
-            <td>Лабораторна <br>Робота №4</td>
+            <td><a href="./Lab3/Lab3.html"></a>Лабораторна <br>Робота №3</td>
+            <td><a href="./Lab4/Lab4.html"></a>Лабораторна <br>Робота №4</td>
             <td>Лабораторна <br>Робота №5</td>
             <td>Лабораторна <br>Робота №6</td>
             <td>Лабораторна <br>Робота №7</td>
