--- a/Lab3/Conclusions.html
+++ b/Lab3/Conclusions.html
@@ -20,7 +20,7 @@
     <ul class="listLabWorks">
         <li><a href="../Lab1.html">Лабораторна <br>Робота №1</a></li>
         <li><a href="../Lab2/Lab2.html">Лабораторна <br>Робота №2</a></li>
-        <li>Лабораторна <br>Робота №3</li>
+        <li><a href="../Lab3/Lab3.html"></a>Лабораторна <br>Робота №3</li>
         <li>Лабораторна <br>Робота №4</li>
         <li>Лабораторна <br>Робота №5</li>
         <li>Лабораторна <br>Робота №6</li>
