--- a/Lab2/Lab2.html
+++ b/Lab2/Lab2.html
@@ -21,8 +21,8 @@
         <tr>
             <td><a href="../Lab1.html">Лабораторна <br>Робота №1</a></td>
             <td>Лабораторна <br>Робота №2</td> 
-            <td>Лабораторна <br>Робота №3</td>
-            <td>Лабораторна <br>Робота №4</td>
+            <td><a href="../Lab3/Lab3.html"></a>Лабораторна <br>Робота №3</td>
+            <td><a href="../Lab4/Lab4.html"></a>Лабораторна <br>Робота №4</td>
             <td>Лабораторна <br>Робота №5</td>
             <td>Лабораторна <br>Робота №6</td>
             <td>Лабораторна <br>Робота №7</td>
