--- a/Lab3/Lab3.html
+++ b/Lab3/Lab3.html
@@ -22,6 +22,9 @@
         <li><a href="../Lab2/Lab2.html">Лабораторна <br>Робота №2</a></li>
         <li>Лабораторна <br>Робота №3</li>
         <li><a href="../Lab4/Lab4.html">Лабораторна <br>Робота №4</a></li>
+        <li><a href="</li>
+
+         <a href="./"></a>   
         <li>Лабораторна <br>Робота №5</li>
         <li>Лабораторна <br>Робота №6</li>
         <li>Лабораторна <br>Робота №7</li>
