--- a/Lab6/Lab6.html
+++ b/Lab6/Lab6.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Звіти з лабораторних робіт</h1>
     <h1>З дисципліни "Інтернет-технології та проєктування WEB-застосувань"</h1>
-    <h3>Студента групи ІС-31 Ужакова Нікіти Костянтиновича</h3>
+    <h3>Студента групи ІС-32 Філіповича Дмитра Олександровича</h3>
     
     <hr>
     <ul class="listLabWorks">
@@ -50,10 +50,9 @@
                 Реалізація програм засовами мови JAVASCRIPT
                 <br><br>
 
-                Місце розташування ЛР №6: <a href="https://github.com/NKUzhakov/IC-31-Uzhakov-Nikita-Lab-5">https://github.com/NKUzhakov/IC-31-Uzhakov-Nikita-Lab-5</a> <br>
-                Сайт: <a href="https://nkuzhakov.github.io/IC-31-Uzhakov-Nikita-Lab-5/">https://nkuzhakov.github.io/IC-31-Uzhakov-Nikita-Lab-5/</a> <br>            
-                Місце розташування звітнього HTML-документу: <a href="https://github.com/NKUzhakov/IC-31-Uzhakov-Nikita-Report-File">https://github.com/NKUzhakov/IC-31-Uzhakov-Nikita-Report-File</a> <br>
-                Сайт звітнього HTML-документу: <a href="https://nkuzhakov.github.io/IC-31-Uzhakov-Nikita-Report-File/">https://nkuzhakov.github.io/IC-31-Uzhakov-Nikita-Report-File/</a> <br>
+                Сайт: <a href="https://dimalfi.github.io/is-32_computer_complection_Filipovych/">https://dimalfi.github.io/is-32_computer_complection_Filipovych/</a> <br>            
+                Місце розташування звітнього HTML-документу: <a href="https://github.com/dimalfi/is-32_zvit_Filipovych">https://github.com/dimalfi/is-32_zvit_Filipovych</a> <br>
+                Сайт звітнього HTML-документу: <a href="dimalfi.github.io/is-32_zvit_Filipovych/">dimalfi.github.io/is-32_zvit_Filipovych/</a> <br>
             </div>   
             
             <div id="task2">
