--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
         <tr>
             <td><a href="Lab1.html">Лабораторна <br>Робота №1</a></td>
             <td><a href="./Lab2/Lab2.html">Лабораторна <br>Робота №2</a></td> 
-            <td>Лабораторна <br>Робота №3</td>
-            <td>Лабораторна <br>Робота №4</td>
-            <td>Лабораторна <br>Робота №5</td>
-            <td>Лабораторна <br>Робота №6</td>
+            <td><a href="./Lab2/Lab2.html">Лабораторна <br>Робота №2</a></td>             
+            <td><a href="./Lab3/Lab3.html">Лабораторна <br>Робота №3</a></td>
+            <td><a href="./Lab4/Lab4.html">Лабораторна <br>Робота №4</a></td>
+            <td><a href="./Lab5/Lab5.html">Лабораторна <br>Робота №5</a></td>
+            <td><a href="./Lab6/Lab6.html">Лабораторна <br>Робота №6</a></td>
             <td>Лабораторна <br>Робота №7</td>
             <td>Лабораторна <br>Робота №8</td>
             <td>Лабораторна <br>Робота №9</td>
